# readmerag

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  github_client.py  llm_client.py  main.py  markdown_cleaner.py  pyproject.toml  requirements.txt  vector_engine.py
static/: app.js  index.html  style.css
tests/: test_keyword_routing.py  test_markdown_cleaner.ipynb  test_metadata.ipynb
